# Aulos

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.config.js  app.config.ts  backend_todo_list.md  constants.ts  deployment-guide.md  docker-compose.yml  eas.json  example.tsx  package-lock.json  package.json  pyproject.toml  setup.sh  styles.tsx  supabase.ts  supabase_advisor.md
.devcontainer/: Dockerfile  devcontainer.json
app/: StorageUtils.tsx  _layout.tsx  index.tsx  styles.tsx  user_profile.tsx
app/(auth)/: _layout.tsx  forgot-password.tsx  login.tsx  privacy-policy.tsx  registration.tsx  reset-password.tsx  terms-of-service.tsx
app/(tabs)/: _layout.tsx  add_post.tsx  home.tsx  index.tsx  profile.tsx  search.tsx
app/API/: .env  .env.example  auth_utils.py  main.py  musician.db  pyproject.toml
app/API/db/: database.py
app/API/models/: user.py
app/API/routers/: auth.py  users.py
app/API/schemas/: user.py
app/API/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/API/src/models/: post.py
app/API/src/routers/: auth.py  search.py
app/API/src/schemas/: user.py
app/schemas/: README.txt  user.tsx
components/: ErrorBoundary.tsx  HeaderToggleButton.tsx  post_card.tsx
components/PostCard/: MediaListRenderer.tsx  PostActionIcon.tsx  PostCard.tsx  (+1 more)
hooks/: AVHooks.tsx  AuthContext.tsx  ThemeContext.tsx  useProtectedRoute.tsx  useRedirectIfNotAuthenticated.tsx  useTheme.tsx
models/: post.ts  post_media.ts  review.ts  user.ts
scripts/: deploy-android.sh  deploy-web.sh  deploy.sh
utils/: ErrorUtils.tsx
(+11 files in other folders)
